<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center" >

    <LinearLayout
        android:id="@+id/layadd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/edttask"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@drawable/edt_txt_shape"
            android:gravity="center"
            android:hint="@string/task"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:singleLine="true" >
        </EditText>

      
    </LinearLayout>

    <LinearLayout
        android:id="@+id/laysave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layadd"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="1" >

        <Button
            android:id="@+id/btnsave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight=".5"
            android:background="@drawable/btn_shape"
            android:text="@string/save"
            android:textColor="#fff" />

        <Button
            android:id="@+id/btncancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight=".5"
            android:background="@drawable/btn_shape"
            android:text="@string/cancel"
            android:textColor="#fff" />
    </LinearLayout>

</RelativeLayout>